objects/Research_Period__c.object
<CustomObject><fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drives list view visibility</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Attendance_at_PGR_Conference__c</fullName>
        <label>Attendance at PGR Conference</label>
        <picklist>
            <picklistValues>
                <fullName>Attendee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Attend</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Completed_Supervisory_Meetings__c</fullName>
        <description>Roll up of Interactions where RT = Supervision and Status = Completed</description>
        <label>Completed Supervisory Meetings</label>
        <summaryFilterItems>
            <field>Interaction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Supervisory Meeting</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Interaction__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Interaction__c.Research_Period__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Future_Required_Supervisory_Meetings__c</fullName>
        <description>Served up by Lightning Action 'Re-register'. Populates 'Required Supervisions' on subsequent Research Period record by Research Period Process.</description>
        <label>Future Required Supervisory Meetings</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Narrative__c</fullName>
        <description>Hyperlinked narrative field for use on Staff Community Home Page 'My Tasks' component</description>
        <formula>HYPERLINK("detail/"&amp;Id,Name&amp;" - "&amp; 
IF(TEXT(Status__c)="Completed","Ready for Re-Registration",TEXT(Status__c)))</formula>
        <label>Narrative</label>
        <type>Text</type>
    </fields><fields>
        <fullName>PAP_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PAP Completed</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>PAP_Members__c</fullName>
        <description>Holds string of User IDs for associated PAP Members</description>
        <label>PAP Members</label>
        <length>180</length>
        <type>Text</type>
    </fields><fields>
        <fullName>PAP_Outcome__c</fullName>
        <description>Number field written to by 'Set PAP to Completed' workflow based on Panel Recommendation picklist. Research Period Process then sets Status of Research Period accordingly. Used to overcome limitations of setting picklists via Process and Workflow.</description>
        <label>PAP Outcome</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>PAP_Window_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by Javascript button 'Open PAP Window'. Referenced in JavaScript to conditionally render 'Start PAP Process' in Student Community.</description>
        <label>PAP Window Open</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Period_End_Date__c</fullName>
        <label>Period End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Period_Number__c</fullName>
        <label>Period Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Period_Start_Date__c</fullName>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Period__c</fullName>
        <description>Picklist of Period Number. Drives Kanban view of Research Periods on Staff Community. Updated by Period Number</description>
        <label>Period</label>
        <picklist>
            <picklistValues>
                <fullName>Period 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Period 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Period 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Period 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Period 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Period 6</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Previous_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Period</label>
        <referenceTo>Research_Period__c</referenceTo>
        <relationshipLabel>Next Period</relationshipLabel>
        <relationshipName>Research_Periods</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Re_register__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by Lightning Action 'Re-Register'. Triggers 'Research Period Process' to create follow-up Research Period for next academic research period, and relates new record to this record via 'Previous Period' lookup.</description>
        <label>Re-register</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Required_Supervisory_Meetings__c</fullName>
        <description>Previously Required_Supervisions</description>
        <inlineHelpText>Number of required Supervisions in this Research Period</inlineHelpText>
        <label>Required Supervisory Meetings</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status of Research Period</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Measures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Student_Programme__c</fullName>
        <label>Student Programme</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>You can only assign Research Periods to Student Programmes where Record Type = PGR Programme.</errorMessage>
            <filterItems>
                <field>Student_Programme__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>PGR Student</value>
            </filterItems>
            <filterItems>
                <field>Student_Programme__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>PGR Application</value>
            </filterItems>
            <infoMessage>Oops... the Student Programme you have selected is not a PGR Programme.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Student_Programme__c</referenceTo>
        <relationshipLabel>Research Periods</relationshipLabel>
        <relationshipName>Research_Periods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Student__c</fullName>
        <formula>Student_Programme__r.Student__r.FirstName&amp;" "&amp;Student_Programme__r.Student__r.LastName&amp;" ("&amp;Student_Programme__r.Student__r.LSTM_No__c&amp;")"</formula>
        <label>Student</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Study_Location__c</fullName>
        <formula>TEXT(Student_Programme__r.Location_of_Study__c)</formula>
        <inlineHelpText>Set at Student Programme</inlineHelpText>
        <label>Study Location</label>
        <type>Text</type>
    </fields><fields>
        <fullName>User_is_PAP_Member__c</fullName>
        <description>Returns TRUE if Running User's Contact ID is contained in Assigned Supervisors string on Student Programme parent record. Used to drive List Views on Staff Community.</description>
        <formula>IF(CONTAINS(PAP_Members__c,$User.Id),TRUE,FALSE)</formula>
        <label>User is PAP Member</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>User_is_Supervisor__c</fullName>
        <description>Returns TRUE if Running User's Contact ID is contained in Assigned Supervisors string on Student Programme parent record. Used to drive List Views on Staff Community</description>
        <formula>IF(CONTAINS(Student_Programme__r.Assigned_Supervisors__c,$User.Id),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User is Supervisor</label>
        <type>Checkbox</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Research Period</label><nameField>
        <label>Research Period Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Research Periods</pluralLabel><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><listViews>
        <fullName>Research_Periods_for_Re_registration</fullName>
        <columns>Narrative__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PAP_Completed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PAP_Outcome__c</field>
            <operation>equals</operation>
            <value>1,2,3,4</value>
        </filters>
        <filters>
            <field>User_is_Supervisor__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Research Periods for Re-registration</label>
    </listViews><listViews>
        <fullName>Students_I_am_Supervising</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>Status__c</columns>
        <columns>Study_Location__c</columns>
        <columns>Required_Supervisory_Meetings__c</columns>
        <columns>Completed_Supervisory_Meetings__c</columns>
        <columns>Period_End_Date__c</columns>
        <columns>PAP_Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_is_Supervisor__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Period_End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>PGR Students I am Supervising</label>
    </listViews><recordTypes>
        <fullName>Full_Time</fullName>
        <active>true</active>
        <description>Full Time Students</description>
        <label>Full Time</label>
    </recordTypes><recordTypes>
        <fullName>Part_Time</fullName>
        <active>true</active>
        <description>Part Time Student Research Years</description>
        <label>Part Time</label>
    </recordTypes><validationRules>
        <fullName>Prevent_Reregistration_if_PAP_incomplete</fullName>
        <active>true</active>
        <description>Prevents Copy PAP Members being set to TRUE if PAP Completed = FALSE. 
Lightning Action 'Re-Register' sets Copy PAP Members to True, thus triggering Research Period Process to create new record. Validation prevents  use of action before PAP completed.</description>
        <errorConditionFormula>AND(PAP_Completed__c=FALSE,Re_register__c=TRUE,OR(PAP_Outcome__c=0,PAP_Outcome__c=5,PAP_Outcome__c=6,ISNULL(PAP_Outcome__c)))</errorConditionFormula>
        <errorMessage>You cannot re-register this Student until a Progress Assessment has been completed and the Panel has allowed the Student to re-register</errorMessage>
    </validationRules></CustomObject>